--- a/source/更新日志.md
+++ b/source/更新日志.md
@@ -1,5 +1,20 @@
 # 更新日志
 
+### 2022-06-19 v0.0.11.1
+- 完善可视化中的属性显示功能
+- 修复bug
+### 2022-06-17 v0.0.11
+- 增加构件属性查看功能，命令ACGShowProp
+- 增加快速标注标高功能，命令ACGDimElev
+- 增加快速连续标注功能，命令ACGDimConinuous
+- 增加根据截面分层功能，命令ACGLayerObject
+- 增加快速选择模型中的结构构件功能，命令ACGSelectStructuralObjects
+- 增加快速反转桁架中的斜腹杆功能，命令ACGFlipTrussWeb
+- 从sap2000导入截面增加颜色属性
+- 改进UI
+- 增加初始化检测，避免闪退
+- 修复bug
+
 ### 2022-06-03 v0.0.10
 - 增加从sap2000导入功能
 - 修复bug
